--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Docplanner Group</title>
-	<link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180"href="https://www.docplanner.com/favicon/apple-touch-icon.png"/>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://www.docplanner.com/favicon/apple-touch-icon.png"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -24,10 +28,14 @@
     <nav>
       <div class="header">
         <div class="header_logo">
-			<a href="/">
-				<img class="logo_doc" src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1" alt="Docplanner Group"/>
-			</a>
-		    </div>
+          <a href="/">
+            <img
+              class="logo_doc"
+              src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1"
+              alt="Docplanner Group"
+            />
+          </a>
+        </div>
         <div class="menu">
           <ul class="main-menu">
             <li><a href="/" class="is-current">About us</a></li>
@@ -36,48 +44,88 @@
               <a> Departments<br /> </a>
               <div class="dropdown-content">
                 <ul>
-                  <li><a href="/department?dep=marketing">Marketing &amp; PR</a></li>
-                  <li><a href="/department?dep=customer">Customer Success &amp; Sales</a></li>
-				          <li><a href="/department?dep=it">IT, Product, Data</a></li>
-                  <li><a href="/department?dep=finance">Finance &amp; Administration</a></li>
-				          <li><a href="/department?dep=hr">HR &amp; more</a></li>
+                  <li>
+                    <a href="/department?dep=marketing">Marketing &amp; PR</a>
+                  </li>
+                  <li>
+                    <a href="/department?dep=customer"
+                      >Customer Success &amp; Sales</a
+                    >
+                  </li>
+                  <li><a href="/department?dep=it">IT, Product, Data</a></li>
+                  <li>
+                    <a href="/department?dep=finance"
+                      >Finance &amp; Administration</a
+                    >
+                  </li>
+                  <li><a href="/department?dep=hr">HR &amp; more</a></li>
                 </ul>
               </div>
             </li>
           </ul>
         </div>
       </div>
-    
     </nav>
     <section class="lead section_inner">
-      <img class="lead_logo" src="https://www.docplanner.com/img/sygnet.png" srcset="https://www.docplanner.com/img/sygnet.png 1x, https://www.docplanner.com/img/sygnet@2x.png 2x">
-      <h1>
-        Making the healthcare experience more human
-      </h1>
+      <img
+        class="lead_logo"
+        src="https://www.docplanner.com/img/sygnet.png"
+        srcset="
+          https://www.docplanner.com/img/sygnet.png    1x,
+          https://www.docplanner.com/img/sygnet@2x.png 2x
+        "
+      />
+      <h1>Making the healthcare experience more human</h1>
       <div class="flex-lead">
-        <p>We want patients to find the perfect doctor and book an appointment in the most easy way. The patient journey should be enjoyable, and that's why we are always next to them: to help them find the best possible care. Anytime, anywhere.</p>
-        <p>We also help doctors to better manage their practice and build their online reputation. With our integrated end-to-end solution, doctors are able not only to improve their online presence, but also to devote their time to what really matters: their patients.</p>
+        <p>
+          We want patients to find the perfect doctor and book an appointment in
+          the most easy way. The patient journey should be enjoyable, and that's
+          why we are always next to them: to help them find the best possible
+          care. Anytime, anywhere.
+        </p>
+        <p>
+          We also help doctors to better manage their practice and build their
+          online reputation. With our integrated end-to-end solution, doctors
+          are able not only to improve their online presence, but also to devote
+          their time to what really matters: their patients.
+        </p>
       </div>
     </section>
-    <section class="services .section_inner">
-      <div>
-        <div>
-          <div>icon</div>
-          <div>title</div>
-          <div>conten</div>
-          <div>drop</div>
-        </div>
-        <div>
-          <div>icon</div>
-          <div>title</div>
-          <div>conten</div>
-          <div>drop</div>
-        </div>
-        <div>
-          <div>icon</div>
-          <div>title</div>
-          <div>conten</div>
-          <div>drop</div>
+    <section class="services section_inner">
+      <div class="service-grid">
+        <div class="cartes">
+          <div class="carte1">
+            <div>
+              <img src="https://www.docplanner.com/icons/icon-patients.svg">
+              <div class="title-carte">For patients</div>
+              <div class="content-carte">
+                Find a doctor, book a visit and solve any health-related doubt
+              </div>
+            </div>
+            <div class="dropdown-carte">Choose country</div>
+          </div>
+          <!-- <div class="carte2">
+            <div>
+              <div class="icon-carte">icon</div>
+              <div class="title-carte">For doctors</div>
+              <div class="content-carte">
+                Save time managing visits and cut no-shows by half
+              </div>
+            </div>
+            <div class="dropdown-carte">Choose country</div>
+          </div>
+          <div class="carte3">
+            <div>
+              <div class="icon-carte">icon</div>
+              <div class="title-carte">For clinics</div>
+              <div class="content-carte">
+                Deliver an exceptional patient experience in your clinic
+              </div>
+            </div>
+            <div class="dropdown-carte">2 to 20 specialists</div>
+            <div class="dropdown-carte">more than 20 specialists</div>
+        </div> -->
+        
         </div>
       </div>
     </section>
