--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			We are a global company
 			<br>with local culture
 		</h1>
-		<ul class="brands__logos">
+		<ul class="brands_logos">
 			<li>
 				<a href="//www.znanylekarz.pl" target="_blank">
 					<svg xmlns="http://www.w3.org/2000/svg" width="200" height="32" viewBox="0 0 200 32">
@@ -216,30 +216,214 @@
 			</li>
 			<li class="jameda">
 				<a href="https://www.jameda.de/" target="_blank">
-					<img src="https://www.docplanner.com/logos/logo-jameda.svg">
+					<img class="hoverimg" src="https://www.docplanner.com/logos/logo-jameda.svg">
 				</a>
 			</li>
 			<li class="tuotempo">
 				<a href="https://www.tuotempo.com" target="_blank">
-					<img src="https://www.docplanner.com/logos/logo-tuotempo.svg">
+					<img class="hoverimg" src="https://www.docplanner.com/logos/logo-tuotempo.svg">
 				</a>
 			</li>
 			<li class="gipo">
-				<a href="https://www.gipo.it/" target="_blank">
-					<img src="https://www.docplanner.com/logos/logo-gipo-primary.svg">
+				<a class="col1" href="https://www.gipo.it/" target="_blank">
+					<img class="hoverimg" src="https://www.docplanner.com/logos/logo-gipo-primary.svg">
+				</a>
+        <a class="col2" href="https://clinic-cloud.com/" target="_blank">
+					<img class="hoverimg" src="https://www.docplanner.com/logos/logo-clinicloud.svg">
 				</a>
 			</li>
-			<li class="clinicloud">
-				<a href="https://clinic-cloud.com/" target="_blank">
-					<img src="https://www.docplanner.com/logos/logo-clinicloud.svg">
-				</a>
-			</li>
-			<li class="feegow">
+
+			<li class="feegow ">
 				<a href="https://feegowclinic.com.br/" target="_blank">
-					<img src="https://www.docplanner.com/logos/logo-feegow.svg">
+					<img class="hoverimg" src="https://www.docplanner.com/logos/logo-feegow.svg">
 				</a>
 			</li>
 		</ul>
+	</section>
+  <section class="stats">
+		<div class="section_inner">
+
+			<div class="grid">
+				<header class="col-2 stats__header">
+					<h1><fontsninja-text id="fontsninja-text-153" class="fontsninja-family-2525">
+						The world's biggest
+						</fontsninja-text><br><fontsninja-text id="fontsninja-text-153" class="fontsninja-family-2525">
+						healthcare platform
+					</fontsninja-text></h1>
+					<p><fontsninja-text id="fontsninja-text-155" class="fontsninja-family-55">
+						We work from 9 offices all over the world, bringing Docplanner Group to life in 13 countries.
+					</fontsninja-text></p>
+				</header>
+				<div class="col-2">
+					<div class="grid stats__grid fade-elements">
+						<div class="col-2 fade-elements__visible">
+							<div class="stats__item">
+								<div class="vert-align">
+									<div>
+										<img scr="https://www.docplanner.com/img/flag.png" srcset="https://www.docplanner.com/img/flag.png 1x, https://www.docplanner.com/img/flag@2x.png 2x">
+										<h3><fontsninja-text id="fontsninja-text-163" class="fontsninja-family-2525">Leader in 13 countries</fontsninja-text></h3>
+										<p><fontsninja-text id="fontsninja-text-164" class="fontsninja-family-55">
+											Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile
+										</fontsninja-text></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-2 fade-elements__visible">
+							<div class="stats__item">
+								<div class="vert-align">
+									<div>
+										<img scr="https://www.docplanner.com/img/visits.png" srcset="https://www.docplanner.com/img/visits.png 1x, https://www.docplanner.com/img/visits@2x.png 2x">
+										<h3><fontsninja-text id="fontsninja-text-170" class="fontsninja-family-2525">13,000,000 </fontsninja-text><br><fontsninja-text id="fontsninja-text-170" class="fontsninja-family-2525"> appointments</fontsninja-text></h3>
+										<p><fontsninja-text id="fontsninja-text-172" class="fontsninja-family-55">
+											booked last month
+										</fontsninja-text></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-2 fade-elements__visible">
+							<div class="stats__item">
+								<div class="vert-align">
+									<div>
+										<img scr="https://www.docplanner.com/img/patients.png" srcset="https://www.docplanner.com/img/patients.png 1x, https://www.docplanner.com/img/patients@2x.png 2x">
+										<h3><fontsninja-text id="fontsninja-text-178" class="fontsninja-family-2525">85,000,000 </fontsninja-text><br><fontsninja-text id="fontsninja-text-178" class="fontsninja-family-2525"> patients</fontsninja-text></h3>
+										<p><fontsninja-text id="fontsninja-text-180" class="fontsninja-family-55">
+											visit our websites each month
+										</fontsninja-text></p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-2 fade-elements__visible">
+							<div class="stats__item">
+								<div class="vert-align">
+									<div>
+										<img scr="https://www.docplanner.com/img/doctors.png" srcset="https://www.docplanner.com/img/doctors.png 1x, https://www.docplanner.com/img/doctors@2x.png 2x">
+										<h3><fontsninja-text id="fontsninja-text-186" class="fontsninja-family-2525">190,000</fontsninja-text><br><fontsninja-text id="fontsninja-text-186" class="fontsninja-family-2525"> active doctors</fontsninja-text></h3>
+										<p><fontsninja-text id="fontsninja-text-188" class="fontsninja-family-55">
+											trust our solutions
+										</fontsninja-text></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+  <section class="offices section_inner">
+		<header class="offices__header">
+			<h1><fontsninja-text id="fontsninja-text-191" class="fontsninja-family-2525">
+				Improve the lives of millions.
+				Change yours forever.
+			</fontsninja-text></h1>
+			<p><fontsninja-text id="fontsninja-text-192" class="fontsninja-family-55">
+				More than 2600 team mates share our same vision, goals and passion. With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Rio, Bologna, Mexico City and Curitiba, our search for great talent never stops.
+			</fontsninja-text></p>
+		</header>
+		<div class="offices__slider">
+							<div class="office">
+					<a href="/career?&amp;loc=poland#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/warsaw.png" srcset="https://www.docplanner.com/images/warsaw.png 1x, https://www.docplanner.com/images/warsaw@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-198" class="fontsninja-family-55">
+							Warsaw
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-199" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-198" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=spain#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/barcelona.png" srcset="https://www.docplanner.com/images/barcelona.png 1x, https://www.docplanner.com/images/barcelona@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-204" class="fontsninja-family-55">
+							Barcelona
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-205" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-204" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=germany#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/munich.png" srcset="https://www.docplanner.com/images/munich.png 1x, https://www.docplanner.com/images/munich@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-210" class="fontsninja-family-55">
+							Munich
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-211" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-210" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=turkey#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/istanbul.png" srcset="https://www.docplanner.com/images/istanbul.png 1x, https://www.docplanner.com/images/istanbul@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-216" class="fontsninja-family-55">
+							Istanbul
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-217" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-216" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=italy#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/rome.png" srcset="https://www.docplanner.com/images/rome.png 1x, https://www.docplanner.com/images/rome@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-222" class="fontsninja-family-55">
+							Rome
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-223" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-222" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=italy#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/bologna.png" srcset="https://www.docplanner.com/images/bologna.png 1x, https://www.docplanner.com/images/bologna@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-228" class="fontsninja-family-55">
+							Bologna
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-229" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-228" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=brazil#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/curitiba.png" srcset="https://www.docplanner.com/images/curitiba.png 1x, https://www.docplanner.com/images/curitiba@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-234" class="fontsninja-family-55">
+							Curitiba
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-235" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-234" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=brazil#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/rio-janeiro.png" srcset="https://www.docplanner.com/images/rio-janeiro.png 1x, https://www.docplanner.com/images/rio-janeiro@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-240" class="fontsninja-family-55">
+							Rio De Janeiro
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-241" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-240" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+							<div class="office">
+					<a href="/career?&amp;loc=mexico#jobs-offers" class="office__inner">
+						<figure class="office__image">
+							<img scr="https://www.docplanner.com/images/mexico-city.png" srcset="https://www.docplanner.com/images/mexico-city.png 1x, https://www.docplanner.com/images/mexico-city@2x.png 2x">
+						</figure>
+						<div class="office__desc"><fontsninja-text id="fontsninja-text-246" class="fontsninja-family-55">
+							Mexico City
+							</fontsninja-text><span class="btn btn--small"><fontsninja-text id="fontsninja-text-247" class="fontsninja-family-55">See openings</fontsninja-text></span><fontsninja-text id="fontsninja-text-246" class="fontsninja-family-55">
+						</fontsninja-text></div>
+					</a>
+				</div>
+					</div>
 	</section>
 </body>
 
