--- a/index.html
+++ b/index.html
@@ -245,14 +245,16 @@
 
 			<div class="grid">
 				<header class="col-2 stats__header">
-					<h1><fontsninja-text id="fontsninja-text-153" class="fontsninja-family-2525">
+					<div>
+            <h1>
 						The world's biggest
-						</fontsninja-text><br><fontsninja-text id="fontsninja-text-153" class="fontsninja-family-2525">
+						<br>
 						healthcare platform
-					</fontsninja-text></h1>
-					<p><fontsninja-text id="fontsninja-text-155" class="fontsninja-family-55">
+					  </h1>
+					  <p><
 						We work from 9 offices all over the world, bringing Docplanner Group to life in 13 countries.
-					</fontsninja-text></p>
+					  </p>
+        </div>
 				</header>
 				<div class="col-2">
 					<div class="grid stats__grid fade-elements">
