--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     />
   </head>
 
-  <body>
-    <nav>
-      <div class="header">
+  <body >
+    <nav >
+      <div class="header section_inner">
         <div class="header_logo">
           <a href="/">
             <img
